# note-agent

./: .gitignore  README.md  pyproject.toml
app/: __init__.py
app/routes/: api.py  main.py
app/services/: agent_service.py  chat_service.py  file_service.py  kb_service.py  llm_service.py  project_service.py
app/templates/: index.html  project.html
static/css/: project.css  style.css
static/js/: app.js  project.js
templates/: index.html  project.html
tests/: test_agent_service.py  test_chat_background_context.py  test_intent_detection.py
